--- a/src/css/base/_resets.scss
+++ b/src/css/base/_resets.scss
@@ -21,7 +21,8 @@ table {
 
 body {
     margin: 0;
-    background-color: rgb(10, 25, 47);
+     background-color: rgb(10, 25, 47);
+   /*  background: linear-gradient(#122040, #2E406B); */
 }
 
 h1, h2, h3, h4, h5, h6, p {
