--- a/src/css/media-queries/_media-queries.scss
+++ b/src/css/media-queries/_media-queries.scss
@@ -8,7 +8,7 @@
 
     @media(min-width: 905px) {
         /* width: 768px;   */
-        width: 100%;
+        /* width: 100%; */
         margin-left: 70px;
         margin-right: 70px;
        
