--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -15,3 +15,6 @@ $off-white: #f2f4f5;
 /* Sections */
 @import './sections/works';
 @import './sections/about';
+
+/* Atoms */
+@import './atoms/cube';
