added footer and fixed smooth scroll

--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -779,6 +779,7 @@
                 margin-top: 90px;
                 margin-right: 0;
                 margin-left: 0;
+                margin-bottom: 50px;
 
                 /* --- Capstone Card --- */
                 .capstone-container {
