--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -3,6 +3,7 @@
     height: auto;
     font-family: 'Source Sans Pro';
     position: relative;
+    height: 750px;
 
     h1, h2, p {
         color: white;
@@ -10,11 +11,13 @@
 
     .container {  
         width: auto;
+
         .about-wrapper {
             margin-top: 150px;
             padding-right: 10px;
             padding-left: 10px;            
             position: relative;
+            
 
             .about-content {
                 .about-title {
