--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -15,6 +15,7 @@ $off-white: #f2f4f5;
 /* Sections */
 @import './sections/works';
 @import './sections/about';
+@import './sections/footer';
 
 /* Atoms */
 @import './atoms/cube';
