Resized and added images to swift page

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -17,6 +17,11 @@ $off-white: #f2f4f5;
 @import './sections/about';
 @import './sections/footer';
 
+/* Pages */
+@import './pages/capstone';
+@import './pages/portfolio';
+@import './pages/swift';
+
 /* Atoms */
 @import './atoms/cube';
 
