--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -20,7 +20,7 @@ $off-white: #f2f4f5;
 /* Pages */
 @import './pages/capstone';
 @import './pages/portfolio';
-@import './pages/swift';
+@import './pages/mtm';
 
 /* Atoms */
 @import './atoms/cube';
