--- a/src/css/base/_resets.scss
+++ b/src/css/base/_resets.scss
@@ -29,3 +29,14 @@ body {
 h1, h2, h3, h4, h5, h6, p {
     margin-top:0;
 }
+
+#tsparticles {
+    width: 100%;
+    height: 100%;
+
+}
+.particles{
+    position:absolute !important;
+
+}
+
