--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -3,7 +3,7 @@
     height: auto;
     font-family: 'Source Sans Pro';
     position: relative;
-    height: 750px;
+    height: 900px;
 
     h1, h2, p {
         color: white;
@@ -13,7 +13,7 @@
         width: auto;
 
         .about-wrapper {
-            margin-top: 150px;
+            padding-top: 150px;
             padding-right: 10px;
             padding-left: 10px;            
             position: relative;
@@ -86,8 +86,8 @@
         .container{
             
             .about-wrapper {
-                margin-left: 50px;
-                margin-right: 50px;
+            /*     margin-left: 50px;
+                margin-right: 50px; */
                 .about-content {
                     margin: 0 auto;
                     position: relative;
@@ -118,7 +118,7 @@
     .about-showcase {
         
         .container {
-         
+         margin: 0;
             .about-wrapper {                  
 
                 .about-content {
@@ -137,7 +137,7 @@
                         position: absolute;
                         top: 0;
                         right: 0;
-                        width:190px;
+                        width:180px;
                         margin-right: 15%;
                     }
                 }
