--- a/src/css/sections/_footer.scss
+++ b/src/css/sections/_footer.scss
@@ -2,7 +2,7 @@
     height: 60px;
     margin-top: 100px;
     text-align: center;
-    background: #131f38;
+    background: #090e18;
     font-family: 'Source Sans Pro';
 
     p {
