--- a/src/css/atoms/_cube.scss
+++ b/src/css/atoms/_cube.scss
@@ -3,6 +3,7 @@
     perspective: 1000px;
     perspective-origin: 50% 50%;
     margin-bottom: 50px;
+    display: none;
 
     .about-cube {
         transform-style: preserve-3d;
@@ -57,3 +58,8 @@
 }
 
 
+@media (min-width: 900px ){
+    .about-box {
+        display: block;
+    }
+}
