--- a/src/css/sections/_about.scss
+++ b/src/css/sections/_about.scss
@@ -20,9 +20,9 @@
             
 
             .about-content {
+        
                 .about-title {
                     color: $off-white;
-                    font-size: 24px;
                     font-weight: 600;
                     max-width: 600px;
                     margin: 70px 0 40px; 
@@ -42,11 +42,12 @@
                     position: relative;
                     background-color: rgb(187, 193, 206);
                     top: -10px;     
-                    right: -117px; 
+                    right: -140px; 
                     overflow: hidden;
         
                 }
 
+                
 
                 
                 ul {
@@ -73,8 +74,22 @@
                     }
                 }
 
+                .contact {
+                    display: block;
+                    margin: 0 auto;
+                    margin-top: 75px;
+                    text-decoration: none;
+                    color: rgb(100, 255, 218);
+                    cursor: pointer;
+                    border: 1px solid;
+                    border-radius: 4px;
+                    padding: 1rem 1.75rem;
+                    width: 130px;
+                }
+
 
             }
+            
         }
 
     }
@@ -86,8 +101,8 @@
         .container{
             
             .about-wrapper {
-            /*     margin-left: 50px;
-                margin-right: 50px; */
+               margin-left: 20px;
+                margin-right: 20px; 
                 .about-content {
                     margin: 0 auto;
                     position: relative;
@@ -100,17 +115,17 @@
     }
 }
 
-@media (min-width: 775px) {
+/* @media (min-width: 775px) {
     .about-showcase {
+       
         .about-wrapper {
+          
             .about-content {
                 max-width: 1068px;
             }
         }
     }
-}
-
-
+} */
 
 
 
@@ -139,6 +154,10 @@
                         right: 0;
                         width:180px;
                         margin-right: 15%;
+                    }
+
+                    .contact {
+                        margin-left: 0;
                     }
                 }
             }
