--- a/src/css/sections/_works.scss
+++ b/src/css/sections/_works.scss
@@ -17,7 +17,6 @@
 
         .works-title {
             color: $off-white;
-            font-size: 24px;
             font-weight: 600;
             max-width: 600px;
             /* margin: 70px 0 40px;  */
@@ -27,6 +26,7 @@
 
         span {
             color: rgb(100, 255, 218);
+            margin-right: 15px;
         }
 
         .works-title:after {
